[package]
name = "ahecha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "macros",
]
exclude = [
  "examples",
]
resolver = "2"

[dependencies]
ahecha-macros = { path = "./macros" }
dioxus = { version = "0.2.4", features = ["web"] }
web-sys = { version = "0.3.60", features = ["Window", "Document", "Location"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.60"
