[package]
name = "ita_codegen"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backend = []
frontend = []

# Supported web frameworks
rocket = []
# actix-web = []

[lib]
proc-macro=true

[dependencies]
convert_case="0.4.0"
nom="7.1.0"
proc-macro2="1.0.30"
proc-macro-error="1.0.4"
quote="1.0.9"
syn={version="1.0.78",features=["full"]}
regex="1.5.4"
ita_tuple_list={ path = "../tuple_list", version = "*" }

[dev-dependencies]
ita_view={path="../view", version="*"}