[package]
name = "ahecha_codegen"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backend = []
frontend = []

[lib]
proc-macro=true

[dependencies]
convert_case="0.4.0"
nom="7.1.0"
proc-macro2="1.0.32"
proc-macro-error="1.0.4"
quote="1.0.9"
syn={version="1.0.81",features=["full"]}
regex="1.5.4"
ahecha_tuple_list={ path = "../tuple_list", version = "*" }

[dev-dependencies]
ahecha_view={path="../view", version="*"}