[package]
name = "ahecha_html"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Ahecha html"
homepage = "https://github.com/ahecha-co/ahecha"
documentation = "https://docs.rs/ahecha"
repository = "https://github.com/ahecha-co/ahecha"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
ahecha_tuple_list={ path = "../tuple_list", version = "*" }
custom-elements = "0.2.0"
gloo-utils = "0.1.0"

[dependencies.web-sys]
version="0.3.55"
features=[
  "Document",
  "Element",
  "Text",
]