[package]
name = "ita"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backend = ["ita_codegen/backend"]
frontend = ["ita_codegen/frontend"]

rocket = ["ita_codegen/rocket"]

[dependencies]
ita_codegen={ path="../codegen", version="*" }
ita_view={ path="../view", version="*" }