[package]
name = "ahecha_macro"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Ahecha macro crate"
homepage = "https://github.com/ahecha-co/ahecha"
documentation = "https://docs.rs/ahecha"
repository = "https://github.com/ahecha-co/ahecha"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backend = []
frontend = []

[lib]
proc-macro=true

[dependencies]
convert_case="0.4.0"
proc-macro2="1.0.32"
proc-macro-error="1.0.4"
quote="1.0.9"
syn={version="1.0.81",features=["full"]}

[depencencies.web-sys]
version = "0.3.55"
features = [
  "Document",
  "DocumentType",
  "DomImplementation",
]

[dev-dependencies]
ahecha_html={path="../html", version="*"}
wasm-bindgen = "0.2.78"
web-sys = {version="0.3.55", features=["HtmlElement"]}