[package]
name = "ahecha_tuple_list"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
#tuple_list = "0.1.3"
# web-sys={version="0.3.55",features=["Document", "DomParser", "HtmlCollection", "HtmlElement", "HtmlDivElement", "SupportedType"]}