[package]
name = "etagere_view"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
# sauron="0.43.9"
# syn-rsx="0.8.0"
# web-sys={version="0.3.55",features=["Document", "DomParser", "HtmlCollection", "HtmlElement", "HtmlDivElement", "SupportedType"]}