[package]
name = "ahecha_view"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
ahecha_tuple_list={ path = "../tuple_list", version = "*" }
gloo-utils = "0.1.0"

[dependencies.web-sys]
version="0.3.55"
features=[
  "Document",
  "Element",
  "Text",
]