[package]
name = "ahecha_cli"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "ahecha"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", default-features = false, features = [
  "any",
  "macros",
  "postgres",
  "runtime-tokio-rustls"
] }
tokio = { version = "1.20", features = ["macros", "rt", "rt-multi-thread"] }
