[package]
edition = "2021"
name = "ahecha_extra"
version = "0.0.1"

[features]
default = []
s3 = ["rust-s3"]

[dependencies]
anyhow = "1.0"
axum = "0.5"
axum-extra = "0.2"
axum-macros = "0.2"
dyn-clone = "1.0"
http = "0.2"
image = "0.24"
js-sys = "0.3.57"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
time = "*"
wasm-bindgen = "0.2.80"
web-sys = { version = "0.3.57", features = ["Document", "Element", "Window"] }

[dependencies.ahecha_html]
path = "../html"
version = "0.0"

[dependencies.ahecha_macro]
features = ["extra"]
path = "../macro"
version = "0.0"

[dependencies.rust-s3]
optional = true
version = "0.30"

[dependencies.tokio]
features = ["macros"]
version = "1.0"

[dev-dependencies]
async-trait = "0.1"
axum-macros = "0.2"

[dev-dependencies.ahecha]
features = ["partials"]
path = "../lib"
version = "0"

[dev-dependencies.axum-extra]
features = ["typed-routing"]
version = "0.2"

[dev-dependencies.serde]
features = ["derive"]
version = "1.0"