[package]
name = "ahecha_extra"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Ahecha extra"
homepage = "https://github.com/ahecha-co/ahecha"
documentation = "https://docs.rs/ahecha"
repository = "https://github.com/ahecha-co/ahecha"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["backend"]
backend = ["axum", "axum-extra"]
frontend = ["web-sys"]

[dependencies]
ahecha = { path = "../lib", version = "0.0.10" }
async-trait = "0.1"
axum = { version = "^0.5", optional = true, features = ["headers"] }
axum-extra = { version = "^0.3", optional = true, features = ["typed-routing"] }
mime = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[dependencies.web-sys]
version = "0.3.57"
features = [
  "Document",
  "Element",
  "Location",
  "Node",
  "Window",
]
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
