[package]
name = "ahecha_html"
version = "0.0.9"
edition = "2021"
license = "MIT"
description = "Ahecha html"
homepage = "https://github.com/ahecha-co/ahecha"
documentation = "https://docs.rs/ahecha"
repository = "https://github.com/ahecha-co/ahecha"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[features]
default = []
time = ["sqlx/time", "time_"]
chrono = ["sqlx/chrono"]
partials = ["async-trait", "serde_urlencoded"]

[dependencies]
async-trait = { version = "0.1.52", optional = true }
axum-core = "0.2.1"
http = "0.2.5"
http-body = "0.4.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_urlencoded = { version = "0.7.1", optional = true }
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls"], optional = true }
time_ = { package = "time", version = "0.2.27", optional = true }