[package]
name = "ahecha_html"
version = "0.0.9"
edition = "2021"
license = "MIT"
description = "Ahecha html"
homepage = "https://github.com/ahecha-co/ahecha"
documentation = "https://docs.rs/ahecha"
repository = "https://github.com/ahecha-co/ahecha"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[features]
default = ["time"]
partials = ["async-trait", "serde_urlencoded"]

[dependencies]
async-trait = { version = "0.1", optional = true }
axum-core = "0.2"
http = "0.2"
http-body = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = { version = "0.7", optional = true }
time = { package = "time", version = "0.2", optional = true }