[package]
name = "ahecha_html"
version = "0.0.9"
edition = "2021"
license = "MIT"
description = "Ahecha html"
homepage = "https://github.com/ahecha-co/ahecha"
documentation = "https://docs.rs/ahecha"
repository = "https://github.com/ahecha-co/ahecha"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[features]
default = []
partials = ["async-trait", "serde_urlencoded"]

[dependencies]
async-trait = { version = "0.1.52", optional = true }
axum-core = "0.2"
axum-extra = { version = "0.3", features = ["typed-routing"] }
http = "0.2.5"
http-body = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = { version = "0.7.1", optional = true }
time = { version = "0.3", optional = true, features = ["serde-well-known"] }