[package]
name = "ahecha"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backend = ["ahecha_macro/backend"]
frontend = ["ahecha_macro/frontend"]

[dependencies]
ahecha_macro = { path="../macro", version="*" }
ahecha_html = { path="../html", version="*" }
ahecha_record = { path="../record", version="*" }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"