[package]
name = "ahecha_macro"
version = "0.0.9"
edition = "2021"
license = "MIT"
description = "Ahecha macro crate"
homepage = "https://github.com/ahecha-co/ahecha"
documentation = "https://docs.rs/ahecha"
repository = "https://github.com/ahecha-co/ahecha"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backend = []
frontend = []

[lib]
proc-macro=true

[dependencies]
convert_case = "0.5.0"
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full"] }

[dev-dependencies]
ahecha = { path = "../lib", version = "0.0" }
pretty_assertions = "1.1.0"