[package]
name = "ahecha_macro"
version = "0.0.10"
edition = "2021"
license = "MIT"
description = "Ahecha macro crate"
homepage = "https://github.com/ahecha-co/ahecha"
documentation = "https://docs.rs/ahecha"
repository = "https://github.com/ahecha-co/ahecha"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backend = []
frontend = []
extra = []

[lib]
proc-macro=true

[dependencies]
convert_case = "0.5.0"
proc-macro2 = { version = "1.0.36", features = ["span-locations"] }
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full"] }

[dev-dependencies]
ahecha = { path = "../lib", version = "0", features = ["partials"] }
axum = "0.4.8"
axum-extra = { version = "0.1.5", features = ["typed-routing"] }
pretty_assertions = "1.1.0"
serde = "1.0"