[package]
name = "ahecha_macro"
version = "0.0.10"
edition = "2021"
license = "MIT"
description = "Ahecha macro crate"
homepage = "https://github.com/ahecha-co/ahecha"
documentation = "https://docs.rs/ahecha"
repository = "https://github.com/ahecha-co/ahecha"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backend = ["record"]
frontend = []
record = []

[lib]
proc-macro=true

[dependencies]
ahecha_cli = { version = "0.0.1", path = "../cli" }
convert_case = "0.5.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.36"
quote = "1.0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "1.0.86", features = ["full"] }

[dev-dependencies]
ahecha = { path = "../lib", version = "0.0" }
pretty_assertions = "1.1.0"
sqlx = { version = "0.6", features = ["macros","postgres", "runtime-tokio-rustls", "uuid"] }
