[package]
name = "ahecha_record"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.anyhow]
version = "1.0"

#[dependencies.frunk]
#version = "0.4.0"

[dependencies.serde]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.sqlx]
version = "0.5"
features = [
  "postgres",
  "runtime-tokio-rustls"
]

