[package]
name = "ahecha_record"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.anyhow]
version = "1.0"

#[dependencies.frunk]
#version = "0.4.0"

[dependencies.proc-macro2]
version = "1.0"

[dependencies.serde]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.sqlx]
version = "0.5"
features = [
  "postgres",
  "runtime-tokio-rustls"
]

[dependencies.syn]
version = "1.0"

[dependencies.thiserror]
version = "1.0"
