[package]
name = "api-example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.16", features = ["macros"] }
dioxus = { version = "0.2.4", features = ["web", "ssr"] }
ahecha = { path = "../../" }
tokio = { version = "1.21.1", features = ["macros", "rt", "rt-multi-thread"] }
