[package]
name = "todos-example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["html", "ssr", "web"] }
ahecha = { path = "../../" }
serde = "1.0.144"
im-rc = "15.1.0"
reqwest = { version = "0.11.12", features = ["json"] }
tracing = "0.1.36"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.5.16", features = ["macros"] }
tokio = { version = "1.21.1", features = ["macros", "rt", "rt-multi-thread"] }
tower-http = { version = "0.3.4", features = ["fs"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = "0.2.0"
tracing-wasm = "0.2.1"
uuid = { version = "1.1.2", features = ["serde", "js"] }
