[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etagere = { path = "../../../core/lib", version="*" }
rocket = "0.5.0-rc.1"

api = { path = "../app/api", version="*" }
models = { path = "../app/models", version="*" }
pages = { path = "../app/pages", version="*" }