[package]
name = "simple-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahecha = { path = "../../" }
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-web = { git = "https://github.com/dioxuslabs/dioxus" }
log = "0.4.17"
tracing-wasm = "0.2.1"
wasm-logger = "0.2.0"
