[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
backend = ["etagere/backend"]
frontend = ["etagere/frontend"]

[dependencies]
etagere = { path = "../../../../core/lib", version = "*" }
rocket = "0.5.0-rc.1"

models = { path = "../models", version="*" }

[build-dependencies]
etagere_build = { path = "../../../../core/build", version = "*" }