[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
backend = ["ahecha/backend", "rocket"]
frontend = ["ahecha/frontend"]

[dependencies]
ahecha = { path = "../../../../core/lib", version = "*" }
rocket = { version = "0.5.0-rc.1", optional = true, features = ["json"] }

models = { path = "../models", version="*" }

[build-dependencies]
ahecha_build = { path = "../../../../core/build", version = "*" }