[package]
name = "components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
backend = ["etagere/backend"]
frontend = ["etagere/frontend"]

[dependencies]
etagere = { path = "../../../../core/lib", version = "*" }
models = { path = "../models", version = "*" }