[package]
name = "components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
backend = ["ita/backend"]
frontend = ["ita/frontend"]

[dependencies]
ita = { path = "../../../../core/lib", version = "*" }
models = { path = "../models", version = "*" }