[package]
name = "components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
backend = ["ahecha/backend"]
frontend = ["ahecha/frontend"]

[dependencies]
ahecha = { path = "../../../../core/lib", version = "*" }
models = { path = "../models", version = "*" }