[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
backend = ["ita/backend"]
frontend = ["ita/frontend"]

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"

ita = { path = "../../../../core/lib", version = "*" }